--- a/src/styles/orgs/ContactForm.module.scss
+++ b/src/styles/orgs/ContactForm.module.scss
@@ -489,6 +489,7 @@ Detail Form End
 
 .input {
   min-width: 100%;
+  max-width: 100%;
   height: 44px;
   background-color: rgb(255, 255, 255);
   line-height: 20px;
@@ -539,6 +540,7 @@ Detail Form End
 }
 
 .inputInquiry {
+  min-height: 150px;
 }
 
 .policy {
