--- a/src/styles/orgs/SelectFair.module.scss
+++ b/src/styles/orgs/SelectFair.module.scss
@@ -95,12 +95,17 @@
   width: 100%;
   height: 57px;
   padding-left: 12px;
+  color: #707070;
 
   &::placeholder {
     color: #a6a08a;
   }
 
   &[type="date"] {
+    -webkit-appearance: none;
+    background: transparent;
+    color: #707070;
+    padding-right: 40px;
     position: relative;
 
     &::-webkit-inner-spin-button {
