basic認証エラー対応

--- a/src/styles/orgs/ContactForm.module.scss
+++ b/src/styles/orgs/ContactForm.module.scss
@@ -221,6 +221,8 @@ Detail Form Start
     background: #a6a08a;
     border: 1px solid #a6a08a;
     font-size: 18px;
+    font-weight: 300;
+    font-family: "Yu Mincho";
   }
 
   .notes {
