--- a/src/styles/orgs/HamburgerMenu.module.scss
+++ b/src/styles/orgs/HamburgerMenu.module.scss
@@ -84,7 +84,8 @@
   justify-content: center;
   align-items: flex-start;
   gap: 1.5em 56px;
-  max-height: 195px;
+  // max-height: 195px;
+  max-height: 255px;
   flex-wrap: wrap;
 }
 
