カレンダーのスタイルを調整

--- a/src/styles/orgs/ContactForm.module.scss
+++ b/src/styles/orgs/ContactForm.module.scss
@@ -192,6 +192,7 @@ Detail Form Start
       background-color: #e0e0e0;
       border-color: #707070;
       color: #707070;
+      opacity: 1;
     }
 
     &.inputInquiry {
