FullCalendarのCSSを直接追加

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -309,7 +309,14 @@ a {
   }
 
   .fc .fc-daygrid tr {
-    height: 22px;
+    // height: 16px;
+  }
+
+  .fc {
+    .fc-col-header,
+    .fc-col-header-cell {
+      max-height: 12px;
+    }
   }
 
   .fc .fc-daygrid-day-events {
