フォーム確認画面組み込み

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -26,20 +26,51 @@
   // width: 50px; /* セルの幅を設定 */
 }
 
+.fc .fc-daygrid-body-unbalanced .fc-daygrid-day-events {
+  min-height: unset;
+  width: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 24px;
+  height: 24px;
+  z-index: -1;
+}
+
+.fc .fc-daygrid-event-harness {
+  width: 100%;
+  height: 100%;
+}
+
+.fc .fc-daygrid-day.fc-day-today {
+  background-color: unset;
+}
+
+.fc .fc-day-past {
+  pointer-events: none;
+}
+
+.fc .fc-day-today,
+.fc .fc-day-future {
+}
+
 .fc .fc-daygrid-day-events {
   // display: none;
 
   .fc-h-event {
     border: none;
-    width: 24px;
-    height: 24px;
     background: #e0e0e0;
-    border-radius: 99px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: -1;
+    width: 100%;
+    height: 100%;
+    border-radius: 999px;
+    overflow: hidden;
+    margin: 0;
+    cursor: pointer;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // z-index: -1;
   }
 }
 
