--- a/src/styles/libs/Pagination.module.scss
+++ b/src/styles/libs/Pagination.module.scss
@@ -1,7 +1,7 @@
 .body {
   position: fixed;
   inset: 0;
-  background-color: #93c7c3;
+  background-color: #f4f7f8;
 
   display: flex;
   justify-content: center;
