--- a/src/styles/orgs/HamburgerMenu.module.scss
+++ b/src/styles/orgs/HamburgerMenu.module.scss
@@ -46,7 +46,7 @@
   gap: 14px;
   font-size: 30px;
   letter-spacing: 0.04em;
-  color: #e0e0e0;
+  color: #fff;
 }
 
 .phoneIcon {
@@ -130,6 +130,7 @@
   letter-spacing: 0.04em;
   text-align: center;
   line-height: 1.33;
+  color: #fff;
 
   span {
     font-size: 14px;
