--- a/src/styles/orgs/FixedLinks.module.scss
+++ b/src/styles/orgs/FixedLinks.module.scss
@@ -2,8 +2,7 @@
   position: fixed;
 
   right: 0;
-  top: 55%;
-  transform: translateY(-50%);
+  bottom: 0;
   width: 64px;
   display: grid;
   grid-template-areas: "line" "reservation" "document";
