--- a/src/styles/mols/BridalCategoriesSelect.module.scss
+++ b/src/styles/mols/BridalCategoriesSelect.module.scss
@@ -24,7 +24,7 @@
     color: #fff;
   }
 
-  &:before {
+  .image {
     position: absolute;
     left: 12px;
     top: 50%;
@@ -35,109 +35,10 @@
     display: inline-block;
     background-size: contain;
     vertical-align: middle;
-  }
 
-  &.all {
-    &:before {
-      background-image: url(/images/icon_fair_all.svg);
-    }
-  }
-
-  &.new {
-    &:before {
-      background-image: url(/images/icon_fair_new.svg);
-    }
-  }
-
-  &.food {
-    &:before {
-      background-image: url(/images/icon_fair_food.svg);
-    }
-  }
-
-  &.season {
-    &:before {
-      background-image: url(/images/icon_fair_season.svg);
-    }
-  }
-
-  &.ceremony {
-    &:before {
-      background-image: url(/images/icon_fair_ceremony.svg);
-    }
-  }
-
-  &.dress {
-    &:before {
-      background-image: url(/images/icon_fair_dress.svg);
-    }
-  }
-
-  &.weekends {
-    &:before {
-      background-image: url(/images/icon_fair_weekends.svg);
-    }
-  }
-
-  &.weekdays {
-    &:before {
-      background-image: url(/images/icon_fair_weekdays.svg);
-    }
-  }
-
-  &.online {
-    &:before {
-      background-image: url(/images/icon_fair_online.svg);
-    }
-  }
-
-  &.selected {
-    &.new {
-      &:before {
-        background-image: url(/images/icon_fair_new-hover.svg);
-      }
-    }
-
-    &.food {
-      &:before {
-        background-image: url(/images/icon_fair_food-hover.svg);
-      }
-    }
-
-    &.season {
-      &:before {
-        background-image: url(/images/icon_fair_season-hover.svg);
-      }
-    }
-
-    &.ceremony {
-      &:before {
-        background-image: url(/images/icon_fair_ceremony-hover.svg);
-      }
-    }
-
-    &.dress {
-      &:before {
-        background-image: url(/images/icon_fair_dress-hover.svg);
-      }
-    }
-
-    &.weekends {
-      &:before {
-        background-image: url(/images/icon_fair_weekends-hover.svg);
-      }
-    }
-
-    &.weekdays {
-      &:before {
-        background-image: url(/images/icon_fair_weekdays-hover.svg);
-      }
-    }
-
-    &.online {
-      &:before {
-        background-image: url(/images/icon_fair_online-hover.svg);
-      }
+    img {
+      width: 100%;
+      height: auto;
     }
   }
 }
@@ -162,7 +63,7 @@
     height: 40px;
     font-size: 14px;
 
-    &:before {
+    .image {
       width: 16px;
       height: 16px;
     }
@@ -180,7 +81,7 @@
     font-size: 10px;
     border-radius: 4px;
 
-    &:before {
+    .image {
       width: 12px;
       height: 12px;
       left: 8px;
