公開用に調整

--- a/src/styles/mols/ContentsAndImage.module.scss
+++ b/src/styles/mols/ContentsAndImage.module.scss
@@ -23,7 +23,8 @@
   position: relative;
   background-color: #f4f7f8;
   min-height: 100%;
-  padding: 0 124px;
+  // padding: 0 124px;
+  padding: 0 64px;
   z-index: 2;
 }
 
