--- a/src/styles/orgs/Footer.module.scss
+++ b/src/styles/orgs/Footer.module.scss
@@ -92,7 +92,8 @@
 
 .links {
   // height: 126px;
-  height: 190px;
+  // height: 190px;
+  height: 110px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
