--- a/src/styles/orgs/HamburgerMenu.module.scss
+++ b/src/styles/orgs/HamburgerMenu.module.scss
@@ -85,7 +85,8 @@
   align-items: flex-start;
   gap: 1.5em 56px;
   // max-height: 195px;
-  max-height: 255px;
+  // max-height: 255px;
+  max-height: 155px;
   flex-wrap: wrap;
 }
 
