--- a/src/styles/mols/Previlege.module.scss
+++ b/src/styles/mols/Previlege.module.scss
@@ -26,9 +26,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 831px;
+  margin: 0 auto;
 }
 
 .block {
+  width: 100%;
   display: flex;
   gap: 20px;
   padding: 40px 0;
