Fair申し込み周り調整

--- a/src/styles/orgs/FairDetail.module.scss
+++ b/src/styles/orgs/FairDetail.module.scss
@@ -88,6 +88,10 @@
   letter-spacing: 0.06em;
 }
 
+.openTime {
+  letter-spacing: 0;
+}
+
 .description {
   font-size: 14px;
   letter-spacing: 0.06em;
