フェアカレンダーとフォームを連動&送信確認

--- a/src/styles/orgs/ContactForm.module.scss
+++ b/src/styles/orgs/ContactForm.module.scss
@@ -237,6 +237,9 @@ Detail Form Start
     font-size: 18px;
     font-weight: 300;
     font-family: "Yu Mincho";
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .notes {
