3→5枚に表示変更

--- a/src/styles/orgs/TopWeddingPlan.module.scss
+++ b/src/styles/orgs/TopWeddingPlan.module.scss
@@ -1,10 +1,10 @@
 .section {
   background: #fff;
-  padding: 0 24px 40px;
+  padding: 0 0 40px;
 }
 
 .container {
-  max-width: 1016px;
+  // max-width: 1016px;
   margin: 80px auto 0;
 }
 
@@ -12,7 +12,7 @@
 }
 
 .swiper {
-  padding-left: 16px !important;
+  // padding-left: 16px !important;
 }
 
 .block {
