💄 フッター下部の余白を調整

--- a/src/styles/orgs/Footer.module.scss
+++ b/src/styles/orgs/Footer.module.scss
@@ -262,7 +262,7 @@
 
 @media screen and (max-width: 768px) {
   .footer {
-    padding: 40px 15px 0;
+    padding: 40px 15px 70px;
   }
 
   .pc {
@@ -358,7 +358,7 @@
   .foot {
     flex-direction: column;
     align-items: center;
-    padding: 12px 0 34px;
+    padding: 12px 0 0;
     gap: 12px;
   }
 }
