--- a/src/styles/orgs/TopNewsEvent.module.scss
+++ b/src/styles/orgs/TopNewsEvent.module.scss
@@ -1,6 +1,7 @@
 .section {
-  background: #fff;
-  padding: 0 24px 40px;
+  margin: 80px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 0 24px 80px;
 }
 
 .container {
@@ -97,13 +98,14 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1200px) {
   .section {
     padding: 0 15px 80px;
+    margin: 40px 15px 80px;
   }
 
   .lists {
-    padding: 40px 32px 0;
+    padding: 40px 16px 0;
     flex-direction: column;
     gap: 20px;
   }
@@ -158,7 +160,7 @@
 
 @media screen and (max-width: 768px) {
   .section {
-    padding: 0 15px 160px;
+    padding: 0 15px 80px;
   }
 
   .link {
