--- a/src/styles/orgs/TopNewsEvent.module.scss
+++ b/src/styles/orgs/TopNewsEvent.module.scss
@@ -1,7 +1,8 @@
 .section {
   margin: 80px;
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 0 24px 80px;
+  // padding: 0 24px 80px; お知らせを実装しない場合はコメントアウト
+  padding: 80px 24px;
 }
 
 .container {
