7/19対応分アップ・未確認

--- a/src/styles/atoms/StaticSubHead.module.scss
+++ b/src/styles/atoms/StaticSubHead.module.scss
@@ -18,7 +18,7 @@
     transform: translateX(-50%);
     width: 24px;
     height: 2px;
-    background-color: #93c7c3;
+    background-color: #7694be;
   }
 }
 
