--- a/src/styles/orgs/GuestServices.module.scss
+++ b/src/styles/orgs/GuestServices.module.scss
@@ -23,7 +23,7 @@
     content: "";
     width: 24px;
     height: 2px;
-    background-color: #93c7c3;
+    background-color: #7694be;
     position: absolute;
     bottom: 0;
     left: 50%;
