--- a/src/styles/atoms/BridalProcessBlock.module.scss
+++ b/src/styles/atoms/BridalProcessBlock.module.scss
@@ -35,7 +35,7 @@
   grid-template-columns: auto 1fr auto;
   align-items: center;
   padding-bottom: 10px;
-  border-bottom: 1px solid #93c7c3;
+  border-bottom: 1px solid #a6a08a;
   margin-bottom: 5.5px;
 }
 
@@ -73,7 +73,7 @@
   grid-area: link;
 
   a {
-    color: #93c7c3;
+    color: #a6a08a;
     font-size: 15px;
     letter-spacing: 0;
     text-decoration: underline;
