--- a/src/styles/orgs/Footer.module.scss
+++ b/src/styles/orgs/Footer.module.scss
@@ -36,9 +36,6 @@
   color: #707070;
 }
 
-.links {
-}
-
 .title {
   font-size: 18px;
   letter-spacing: 0.04em;
@@ -143,6 +140,7 @@
   a {
     transition: 0.2s;
     position: relative;
+    color: #707070;
 
     &:before {
       position: absolute;
@@ -179,7 +177,7 @@
   .body {
     display: grid;
     grid-template-areas:
-      "logo logo"
+      "logo links"
       "main links";
     grid-template-columns: max-content 1fr;
     grid-template-rows: max-content 1fr;
@@ -226,6 +224,8 @@
 
   .links {
     grid-area: links;
+    height: 290px;
+    gap: 1em 40px;
   }
 }
 
@@ -261,7 +261,7 @@
 
 @media screen and (max-width: 768px) {
   .footer {
-    padding: 40px 15px 0;
+    padding: 40px 15px 70px;
   }
 
   .pc {
@@ -297,15 +297,17 @@
   .body {
     grid-template-areas:
       "logo"
-      "main";
+      "main"
+      "links";
     grid-template-columns: 1fr;
-    grid-template-rows: max-content max-content;
+    grid-template-rows: auto auto auto;
     gap: 20px;
   }
 
   .main {
     max-width: 280px;
     margin: 0 auto;
+    align-items: flex-start;
   }
 
   .zipcode {
@@ -348,16 +350,27 @@
     flex-direction: column;
     gap: 14px;
     align-items: center;
+    margin-bottom: 40px;
   }
 
   .links {
-    display: none;
+    width: 268px;
+    height: 342px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin: 0 auto;
+    gap: 1.6em 20px;
+
+    a {
+      display: inline-block;
+    }
   }
 
   .foot {
     flex-direction: column;
     align-items: center;
-    padding: 12px 0 34px;
+    padding: 12px 0 0;
     gap: 12px;
   }
 }
