--- a/src/styles/orgs/ReadyBridal.module.scss
+++ b/src/styles/orgs/ReadyBridal.module.scss
@@ -56,6 +56,7 @@
   position: relative;
   margin-bottom: 40px;
   text-align: center;
+  color: #000000;
 
   &:before {
     content: "";
@@ -77,13 +78,14 @@
 }
 
 .woman {
-  margin-right: 52px;
+  margin-left: 46px;
+  margin-bottom: 20px;
 }
 
 .points {
   display: flex;
   flex-direction: column;
-  gap: 26px;
+  gap: 22px;
 }
 
 .point {
@@ -121,7 +123,6 @@
 }
 
 .man {
-  margin-left: 101px;
   margin-right: 32px;
 }
 
@@ -130,6 +131,7 @@
   padding: 19px 17px 20px;
   background-color: #fff;
   border: 1px solid #93c7c3;
+  color: #93c7c3;
   font-size: 15px;
   line-height: 1.73;
   margin: 50px auto 0;
