--- a/src/styles/orgs/SelectFaqType.module.scss
+++ b/src/styles/orgs/SelectFaqType.module.scss
@@ -27,11 +27,12 @@
   color: #707070;
   cursor: pointer;
   transition: all 0.2s;
+  line-height: 1.73;
 
   &:hover,
   &.active {
-    border: 1px solid #93c7c3;
-    background-color: #f1ebd8;
+    border: 1px solid #7694be;
+    background-color: #ecf9f8;
   }
 
   &:before {
@@ -39,7 +40,7 @@
     position: absolute;
     width: 100%;
     height: 1px;
-    background-color: #93c7c3;
+    background-color: #7694be;
     bottom: -4px;
     left: 0;
   }
