--- a/src/styles/orgs/StaticHead.module.scss
+++ b/src/styles/orgs/StaticHead.module.scss
@@ -22,7 +22,7 @@
     transform: translateX(-50%);
     width: 24px;
     height: 2px;
-    background-color: #93c7c3;
+    background-color: #7694be;
   }
 }
 
@@ -30,7 +30,7 @@
   font-size: 15px;
   text-align: center;
   line-height: 1.73;
-  color: #707070;
+  color: #8c8c8c;
   display: flex;
   justify-content: center;
 
