--- a/src/styles/orgs/Footer.module.scss
+++ b/src/styles/orgs/Footer.module.scss
@@ -276,15 +276,17 @@
 
   .logo {
     flex-direction: column;
-    gap: 12px;
+    gap: 20px;
 
     img {
-      width: 170px;
+      width: 282px;
+      height: auto;
     }
 
     .title {
       text-align: center;
       font-size: 18px;
+      margin-bottom: 20px;
 
       span {
         &:last-child {
@@ -338,8 +340,12 @@
   }
 
   .info {
-    margin-bottom: 18px;
     font-size: 11px;
+    margin-bottom: 4px;
+
+    &:last-child {
+      margin-bottom: 18px;
+    }
   }
 
   .phone .links {
@@ -350,7 +356,7 @@
     flex-direction: column;
     gap: 14px;
     align-items: center;
-    margin-bottom: 40px;
+    margin: 0 auto 20px;
   }
 
   .links {
