--- a/src/styles/orgs/Access.module.scss
+++ b/src/styles/orgs/Access.module.scss
@@ -46,11 +46,11 @@
   align-items: center;
   font-size: 15px;
   line-height: 1.46;
-  border-top: 1px solid #93c7c3;
+  border-top: 1px solid #a6a08a;
   min-height: 81px;
 
   &:last-child {
-    border-bottom: 1px solid #93c7c3;
+    border-bottom: 1px solid #a6a08a;
   }
 }
 
