--- a/src/styles/orgs/ContactForm.module.scss
+++ b/src/styles/orgs/ContactForm.module.scss
@@ -504,7 +504,7 @@ Detail Form End
   line-height: 20px;
   letter-spacing: 0.1em;
   vertical-align: middle;
-  font-family: "EB Garamond", 游明朝体, "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", "Noto Serif JP", serif;
+  font-family: "EB Garamond", 游明朝体, "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", serif;
   font-size: 16px;
   padding: 10px 16px;
   border-radius: 8px;
@@ -617,7 +617,7 @@ Detail Form End
 .submit {
   appearance: none;
   text-align: center;
-  font-family: "EB Garamond", 游明朝体, "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", "Noto Serif JP", serif;
+  font-family: "EB Garamond", 游明朝体, "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", serif;
   color: rgb(255, 255, 255);
   width: 100%;
   max-width: 480px;
