--- a/src/styles/orgs/ContactHeader.module.scss
+++ b/src/styles/orgs/ContactHeader.module.scss
@@ -9,7 +9,7 @@
   font-size: 32px;
   font-weight: 400;
   margin-bottom: 0;
-  font-family: "EB Garamond", "游明朝体", "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", "Noto Serif JP", serif;
+  font-family: "EB Garamond", "游明朝体", "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", serif;
   text-align: center;
   padding: 0 20px;
   font-weight: nomal;
@@ -18,7 +18,7 @@
 
   .span {
     font-size: 14px;
-    font-family: "EB Garamond", "游明朝体", "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", "Noto Serif JP", serif;
+    font-family: "EB Garamond", "游明朝体", "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", serif;
     display: block;
   }
 }
