--- a/src/styles/orgs/ReportBody.module.scss
+++ b/src/styles/orgs/ReportBody.module.scss
@@ -24,7 +24,7 @@
 //   text-align: right;
 //   font-size: 13px;
 //   color: rgb(68, 68, 68);
-//   font-family: "EB Garamond", 游明朝体, "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", "Noto Serif JP", serif;
+//   font-family: "EB Garamond", 游明朝体, "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", serif;
 // }
 
 @media screen and (max-width: 768px) {
