--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -41,6 +41,9 @@
 .fc .fc-daygrid-event-harness {
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .fc .fc-daygrid-day.fc-day-today {
@@ -183,7 +186,7 @@ a {
 
   &:before {
     position: absolute;
-    top: calc(50% + 1px);
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 22px;
